0.05_01  2022-07-15
  [Incompatible Changes]
    * Change match method name and the definition
      [Before]
      method match : int ($string : string, $offset : int)
      
      [After]
      method match_offset : int ($string : string, $offset_ref : int*)
    
  [Changes]
    * Need SPVM::Resource::Re2::V2022_06_01 0.05.
    * Need SPVM 0.9615.
0.05  2022-06-23
  * Catch up with SPVM 0.9612.

0.04  2022-06-22
  * Catch up with SPVM::Unicode 0.03.

0.03  2022-06-21
  * Fix some bugs
0.02  2022-06-13

  - Catch up with latest SPVM.
  - Add SPVM::Unicode to Makefile.PL
  
0.01  2022-06-07

  - First development release